Add missing routes - Update README - Add new tests - Update swagger screenshot and image
