# routes/api/auth/index.js
@@ -3,6 +3,7 @@ const router = express.Router();
 const user = require('../../../models/Users');
 const { checkLoginRequest } = require('./dto');
 const { checkBlankBody } = require('../common-dto');
+const { isValidToken } = require('../../../middleware/token');
 
 // check credentials here
 router.post('/', [checkBlankBody, checkLoginRequest], async (req, res)=> {
@@ -13,6 +14,12 @@ router.post('/', [checkBlankBody, checkLoginRequest], async (req, res)=> {
   res.send({
     token: result
   })
+});
+
+router.post('/validate', [isValidToken], async (req, res)=> {
+  const result = await user.getUserSessionByIdAndOwner(res.locals.token.id, res.locals.user.id);
+  if(result.error) return res.status(401).send()
+  res.send();
 });
 
 module.exports = router;
